# Nauka-cpp_Coders-School

./: .gitignore  CMakeLists.txt  flake.nix
src/: main.cpp
